--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -44,7 +44,7 @@ jobs:
         run: |
           npx concurrently -k -s first -n "SB,TEST" -c "magenta, blue" \
           "npx http-server storybook-static --port 6006 --silent" \
-          "npx wait-on http://127.0.0.1:6006 && npm run test-storybook -- --coverage"
+          "npx wait-on http://127.0.0.1:6006 && npm run test-storybook"
       
       - name: Run Vitest tests
         run: npm run test
